SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>