SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <formula>text(Account.Account_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Category</label>
    <type>Text</type>
</CustomField>