SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>The LaunchDarkly Account ID (associated with the Lead that was converted into this Contact)</description>
    <inlineHelpText>The LaunchDarkly Account ID (associated with the Lead that was converted into this Contact)</inlineHelpText>
    <label>LD Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>