SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Actively_being_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>Actively_being_Sequenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actively being Sequenced</label>
    <type>Checkbox</type>
</CustomField>