SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/adroll__Impressions_External_ID__c.field-meta.xml
<CustomField>
    <fullName>adroll__Impressions_External_ID__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Impressions External ID mirrors Impressions__c field, this field is only used for data purposes, it should not be added to any page layouts or reports.</description>
    <externalId>true</externalId>
    <label>Impressions External ID (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>