SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/adroll__View_Conversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__View_Conversion__c</fullName>
    <formula>adroll__ViewConversion__c*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact View Conversion (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>