SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/AdvocateHub__Date_Added_To_AdvocateHub__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Date_Added_To_AdvocateHub__c</fullName>
    <description>The date the contact was added to the AdvocateHub</description>
    <label>Date Added To AdvocateHub</label>
    <type>DateTime</type>
</CustomField>