SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/AdvocateHub__Date_Joined_AdvocateHub__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Date_Joined_AdvocateHub__c</fullName>
    <description>The date the contact joined the AdvocateHub (logged into it for the first time)</description>
    <label>Date Joined AdvocateHub</label>
    <type>DateTime</type>
</CustomField>