SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/AdvocateHub__Referred_to_Account__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Referred_to_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred to Account</label>
    <type>Checkbox</type>
</CustomField>