SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Assigned_BDR__c.field-meta.xml
<CustomField>
    <fullName>Assigned_BDR__c</fullName>
    <formula>Account.Assigned_BDR__r.FirstName &amp;&quot; &quot;&amp; Account.Assigned_BDR__r.LastName</formula>
    <label>Assigned BDR</label>
    <type>Text</type>
</CustomField>