SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/BDR_Manager__c.field-meta.xml
<CustomField>
    <fullName>BDR_Manager__c</fullName>
    <description>used on BDR manager dashboard</description>
    <formula>Account.Assigned_BDR__r.Manager_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDR Manager</label>
    <type>Text</type>
</CustomField>