SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Behavioral_Rating__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Rating__c</fullName>
    <description>A letter grade assigned to the behavioral score. A, B, C, D</description>
    <inlineHelpText>A letter grade assigned to the behavioral score. A, B, C, D</inlineHelpText>
    <label>Behavioral Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scoring_Rating</valueSetName>
    </valueSet>
</CustomField>