SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Booking_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_CP__c</fullName>
    <description>Used for Chili Piper tracking. TO-2076</description>
    <label>Booking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>