SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Campaigns__c</fullName>
    <label>Campaigns</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>