SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Contact_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Created Date</label>
    <type>Date</type>
</CustomField>