SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <description>How did the contact get in touch with us?</description>
    <inlineHelpText>How did the contact get in touch with us?</inlineHelpText>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_method</valueSetName>
    </valueSet>
</CustomField>