SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <formula>IF(
 IsConverted__c = TRUE, 
  DATEVALUE(CreatedDate), 
 NULL
)</formula>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>