SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Current_Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Opp_Stage__c</fullName>
    <label>Current Opp Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>