SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Current_Sequence_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Task_Due_Date__c</fullName>
    <label>Current Sequence Task Due Date</label>
    <type>Date</type>
</CustomField>