SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Current_Sequence_User_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_User_Integration_ID__c</fullName>
    <label>Current Sequence User Integration ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>