SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Date_Added_to_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_to_Sequence__c</fullName>
    <label>Date Added to Sequence</label>
    <type>Date</type>
</CustomField>