SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Direct_Request__c.field-meta.xml
<CustomField>
    <fullName>Direct_Request__c</fullName>
    <description>Flag to classify whether a Contact is &quot;Direct Source.&quot; Based on criteria of either of the key phrases &quot;Demo&quot;, &quot;Contact Us&quot;, or &quot;Contact Sales&quot; being present in the Last Campaign Name.</description>
    <formula>OR(

CONTAINS( Last_Campaign__r.Name, &quot;Demo&quot; ),
CONTAINS( Last_Campaign__r.Name, &quot;Contact Us&quot; ),
CONTAINS( Last_Campaign__r.Name, &quot;Contact Sales&quot; )
)</formula>
    <inlineHelpText>Flag to classify whether a Contact is currently considered &quot;Direct Source.&quot;</inlineHelpText>
    <label>Direct Request</label>
    <type>Checkbox</type>
</CustomField>