SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Discount_Codes__c.field-meta.xml
<CustomField>
    <fullName>Discount_Codes__c</fullName>
    <description>Mapped from Splash</description>
    <label>Discount Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>