SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Disqualify_Reasons</valueSetName>
    </valueSet>
</CustomField>