SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Double_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Opt-In</label>
    <type>Checkbox</type>
</CustomField>