SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/DQ_Description__c.field-meta.xml
<CustomField>
    <fullName>DQ_Description__c</fullName>
    <label>Opp DQ Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>