SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Executive_Assistant_Name__c.field-meta.xml
<CustomField>
    <fullName>Executive_Assistant_Name__c</fullName>
    <label>Executive Assistant Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>