SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Executive_Assistant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Executive_Assistant_Phone__c</fullName>
    <label>Executive Assistant Phone</label>
    <type>Phone</type>
</CustomField>