SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/IB_OB_Category_Date__c.field-meta.xml
<CustomField>
    <fullName>IB_OB_Category_Date__c</fullName>
    <label>IB/OB Category Date</label>
    <type>Date</type>
</CustomField>