SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/ICP_10__c.field-meta.xml
<CustomField>
    <fullName>ICP_10__c</fullName>
    <formula>ICP_Score__c &gt; 10</formula>
    <label>ICP &gt; 10</label>
    <type>Checkbox</type>
</CustomField>