SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/ICP_Score__c.field-meta.xml
<CustomField>
    <fullName>ICP_Score__c</fullName>
    <label>ICP Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>