SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/ID_of_Currently_Active_Sequence__c.field-meta.xml
<CustomField>
    <fullName>ID_of_Currently_Active_Sequence__c</fullName>
    <label>ID of Currently Active Sequence</label>
    <length>30</length>
    <type>Text</type>
</CustomField>