SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT( Account.Industry )</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>