SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/is_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>is_Account_Owner__c</fullName>
    <label>is Account Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>