SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this is person is the main point of contact for this account.</inlineHelpText>
    <label>Key Contact</label>
    <type>Checkbox</type>
</CustomField>