SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Last_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts (Last Campaign)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>