SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Last_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Date__c</fullName>
    <label>Last Campaign Date</label>
    <type>Date</type>
</CustomField>