SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Last_Campaign_Text__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Text__c</fullName>
    <formula>Last_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Campaign (Text)</label>
    <type>Text</type>
</CustomField>