SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Last_Marketo_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketo_Activity_Date__c</fullName>
    <label>Last Marketo Activity Date</label>
    <type>Date</type>
</CustomField>