SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Latest_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS_Score__c</fullName>
    <label>Latest NPS Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>