SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Latest_NPS_Score_Channel__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS_Score_Channel__c</fullName>
    <label>Latest NPS Score Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SurveyMonkey</fullName>
            </value>
            <value>
                <fullName>Pendo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>