SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Latest_NPS_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS_Score_Date__c</fullName>
    <label>Latest NPS Score Date</label>
    <type>Date</type>
</CustomField>