SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/LD_Version__c.field-meta.xml
<CustomField>
    <fullName>LD_Version__c</fullName>
    <formula>Text(  Account.LD_Version__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LD Version</label>
    <type>Text</type>
</CustomField>