SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Type_Jan</valueSetName>
    </valueSet>
</CustomField>