SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/LeanData_Last_Route_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Last_Route_Date__c</fullName>
    <label>LeanData Last Route Date</label>
    <type>DateTime</type>
</CustomField>