SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Manual_Routing_LeanData__c.field-meta.xml
<CustomField>
    <fullName>Manual_Routing_LeanData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Routing LeanData</label>
    <type>Checkbox</type>
</CustomField>