SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Marketing_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Unsubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Unsubscribe</label>
    <type>Checkbox</type>
</CustomField>