SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Meeting_Type_CP__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_CP__c</fullName>
    <description>Used for Chili Piper tracking. TO-2076</description>
    <label>Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>