SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/MQL_20__c.field-meta.xml
<CustomField>
    <fullName>MQL_20__c</fullName>
    <formula>MQL_Score__c &lt; 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL &lt; 20</label>
    <type>Checkbox</type>
</CustomField>