SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MQL = True if the prospect was qualified by marketing before becoming a customer</description>
    <inlineHelpText>MQL = True if the prospect was qualified by marketing before becoming a customer</inlineHelpText>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>