SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>Date when lead/contact became an MQL</description>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>