SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/No_Show_CP__c.field-meta.xml
<CustomField>
    <fullName>No_Show_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Chili Piper tracking. TO-2076</description>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>