SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Number_of_Active_Sequences__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Sequences__c</fullName>
    <label>Number of Active Sequences</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>