SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Original_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Original_Contact_Method__c</fullName>
    <label>Original Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Contact Sales Form</fullName>
            </value>
            <value>
                <fullName>Contact us</fullName>
            </value>
            <value>
                <fullName>Content Download</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Email - Campaign</fullName>
            </value>
            <value>
                <fullName>Email - Direct</fullName>
            </value>
            <value>
                <fullName>Event - email</fullName>
            </value>
            <value>
                <fullName>Event - in-person</fullName>
            </value>
            <value>
                <fullName>Events - Talk</fullName>
            </value>
            <value>
                <fullName>Invite</fullName>
            </value>
            <value>
                <fullName>Newsletter Signup</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Support Ticket</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Webinar RSVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>