SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Original_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Type__c</fullName>
    <label>Original Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Type</valueSetName>
    </valueSet>
</CustomField>