SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Orphan__c.field-meta.xml
<CustomField>
    <fullName>Orphan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Contact record an orphan? (no Account)</description>
    <inlineHelpText>Is the Contact record an orphan? (no Account)</inlineHelpText>
    <label>Orphan?</label>
    <type>Checkbox</type>
</CustomField>