SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Outbound_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound Eligible</label>
    <type>Checkbox</type>
</CustomField>