SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Outreach_Sequence_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sequence_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outreach Sequence Eligible</label>
    <type>Checkbox</type>
</CustomField>