SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/p2s_base1__ConversionGeneratedContact__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ConversionGeneratedContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be mapped using Lead Conversion Mapping from the Lead.ConversionGeneratedContact__c field</description>
    <inlineHelpText>This field should be mapped using Lead Conversion Mapping from the Lead.ConversionGeneratedContact_c field</inlineHelpText>
    <label>ConversionGeneratedContact</label>
    <type>Checkbox</type>
</CustomField>