SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/p2s_base1__DaysSpent__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__DaysSpent__c</fullName>
    <description>The amount of time the contact has been at the current lifecycle stage.</description>
    <formula>Now() - p2s_base1__TransitionDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of time the contact has been at the current lifecycle stage.</inlineHelpText>
    <label>Days Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>